--- a/css/normalize.css
+++ b/css/normalize.css
@@ -17,7 +17,6 @@ html {
  */
 
 body {
-  margin: 0;
 }
 
 /* HTML5 display definitions
